--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,7 +4,7 @@
     "port": "5433",
     "username": "postgres",
     "password": "docker",
-    "database": "trabalhoFinal",
+    "database": "GIBI",
     "entities": [
         "./src/modules/**/typeorm/entities/*.ts"
     ],
